# gprism

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/popaf/: gnomad_example.txt  gnomad_output_example.txt  korea4k_example.txt
gprism/: __init__.py  __main__.py  cli.py  config.py
gprism/genotype/: posterior.py  reconstruction.py
gprism/io/: parser.py  popaf.py  writer.py
gprism/model/: em.py  likelihood.py  selection.py
gprism/utils/: math.py
tests/: conftest.py  test_em.py  test_likelihood.py  test_math.py  test_popaf.py  test_posterior.py
tests/fixtures/: tiny.biallelic.mpileup
